<resources>
    <string name="app_name">Pets</string>
    <string name="action_settings">Settings</string>
    <string name="overview">Overview</string>
    <string name="name">Name</string>
    <string name="breed">Breed</string>
    <string name="gender">Gender</string>
    <string name="measurement">Measurement</string>
    <string name="weight_unit_kg">kg</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_add_dummy_data">Add Dummy Data</string>
    <string name="action_delete_all_pets">Delete All Pets</string>

    <string-array name="pet_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Unknown</item>
    </string-array>
</resources>
